# config-parser

./: .gitignore  CMakeLists.txt  README.md
data/: config.txt
include/: parser.h
lib/: CMakeLists.txt  utils.cpp  utils.h
src/: main.cpp  parser.cpp
